--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "plist": "^3.0.5",
     "popper.js": "^1.16.1",
     "prismjs": "^1.27.0",
+    "sharp": "0.32.6",
     "snabbdom": "^3.4.0",
     "snabbdom-to-html": "^7.0.0",
     "source-map-support": "^0.5.21",
