Fix the build issue, we have updated the Sharp version to 0.31.3.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -4,6 +4,8 @@ appId: "com.github.marktext.marktext"
 asar: true
 asarUnpack:
 - "**/*.node"
+- "**/node_modules/sharp/**/*"
+- "**/node_modules/@img/**/*"
 directories:
   output: "build"
 # Workaround: Don't download prebuilt libraries (GH#2953).
